tests/ui/inference/need_type_info/issue-107745-avoid-expr-from-macro-expansion.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-107745-avoid-expr-from-macro-expansion.rs:17:22
   |
LL |     println!("{:?}", []);
   |     -----------------^^-
   |     |                |
   |     |                cannot infer type
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
